Mobile overflow corrected

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -17,8 +17,7 @@ html {
 
 // Pattern styles
 
-html,
-body {
+.site {
     overflow-x: hidden;
 }
 
